--- a/index.html
+++ b/index.html
@@ -6,93 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="imágenes/logo MP2 (1).ico" />
     <title>Distribuidora Mascotas Pueyrredón</title>
+    <link rel="stylesheet" href="estilos/estilos.css" />
     <meta
       name="google-site-verification"
       content="v-0Jd6QxM0FsGzEOGLqB7RmO5-00ahh2OfKlCTc4N1U"
     />
-    <link rel="stylesheet" href="estilos/estilos.css" />
   </head>
   <body>
     <header>
-      <img src="imágenes/logo MP2.png" alt="Logo DMP" width="100"/>
+      <nav class="container">
+        <a href="index.html"><img src="imágenes/logo MP2.png" alt="Logo DMP" width="100"/></a>
+        <a href="higiene_gatos.html">HIGIENE GATOS</a>
+        <a href="higiene_perros.html">HIGIENE PERROS</a>
+        <a href="huesos_golosinas.html">VARIEDAD DE HUESOS Y GOLOSINAS</a>
+        <a href="contacto.html">CONTACTO</a>
+      </nav>
       <div class="titulo">
         <h1>DISTRIBUIDORA MASCOTAS PUEYRREDÓN</h1>
-      <h3>Distribuidores directos de piedras sanitarias</h3>
-     </div>
+        <h3>Distribuidores directos de piedras sanitarias</h3>
+      </div>
     </header>
-    <div class="container">
-      <aside>
-        <h2>Listas de precios</h2>
-        <h3>
-        Informanos en el mensaje si sos distribuidor, comerciante o consumidor
-        final y tu ubicación aproximada
-        </h3>
-        <ul>
-          <li class="wapp" >
-            <h2>PEDILA POR WHATSAPP</h2>
-              <ul class="lista2">
-                <li><button>
-                  <a href="https://wa.me/message/YGZ7DM3WJYZIJ1" target="_blank"
-                  >X PALLET</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="https://wa.me/message/YGZ7DM3WJYZIJ1" target="_blank"
-                  >DISTRIBUIDOR</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="https://wa.me/message/YGZ7DM3WJYZIJ1" target="_blank"
-                  >COMERCIO</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="https://wa.me/message/YGZ7DM3WJYZIJ1" target="_blank"
-                  >CONSUMIDOR FINAL</a>
-                  </button>
-                </li>
-              </ul>
-          </li>
-          <li class="mail" >
-            <H2>PEDILA POR MAIL</H2>
-              <ul class="lista2">
-                <li><button>
-                  <a href="mailto:mascotaspueyrredon@gmail.com" target="_blank"
-                  >X PALLET</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="mailto:mascotaspueyrredon@gmail.com" target="_blank"
-                  >DISTRIBUIDOR</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="mailto:mascotaspueyrredon@gmail.com" target="_blank"
-                  >COMERCIO</a>
-                  </button>
-                </li>
-                <li><button>
-                  <a href="mailto:mascotaspueyrredon@gmail.com" target="_blank"
-                  >CONSUMIDOR FINAL</a>
-                  </button>
-                </li>
-              </ul>
-          </li>
-        </ul>
-      </aside>
-      <main>
-        <nav>
-          <a href="index.html">HOME</a>
-          <a href="higiene_gatos.html">HIGIENE GATOS</a>
-          <a href="higiene_perros.html">HIGIENE PERROS</a>
-          <a href="huesos_golosinas.html">VARIEDAD DE HUESOS Y GOLOSINAS</a>
-        </nav>
-        <article>
-          
-        </article>
-        <h3>¡¡¡ GRACIAS POR TU VISITA, ESPERAMOS VERTE NUEVAMENTE POR ACÁ !!!</h3>
-      </main>
-    </div>
-    <footer>Desarrollado por: BQT developer</footer>
+
+    <main>
+      <article></article>
+    </main>
+
+    <footer>
+      <h3>¡¡¡ GRACIAS POR TU VISITA, ESPERAMOS VERTE NUEVAMENTE POR ACÁ !!!</h3>
+      <p></p>
+    </footer>
   </body>
 </html>
