--- a/huesos_golosinas.html
+++ b/huesos_golosinas.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-067ZB7NRZZ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-067ZB7NRZZ");
+    </script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="estilos/estilos.css" />
     <title>Huesos y golosinas</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header id="idheader"></header>
+    <script src="script/header.js"></script>
+  </body>
+  <footer id="idfooter"></footer>
+  <script src="script/footer.js"></script>
 </html>
