--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imágenes/absorsolx2 (2).png" class="d-block w-100" alt="...">
+            <img src="imágenes/absorsolx2 (2).png" class="d-block w-100" alt="absorsol verde">
             <div class="carousel-caption d-none d-md-block">
               <h5>First slide label</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://via.placeholder.com/150x200"class="d-block w-100" alt="...">
+            <img src="imágenes/ag-lavandax2.png"class="d-block w-100" alt="altagama lavanda">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="https://via.placeholder.com/150x200" class="d-block w-100" alt="...">
+            <img src="imágenes/Poopypets.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
