--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imágenes/ag-lavandax2.png"class="d-block w-100" alt="altagama lavanda">
+            <img src="imágenes/ag-lavandax2 (1).png"class="d-block w-100" alt="altagama lavanda">
             <div class="carousel-caption d-none d-md-block">
               <h5>Second slide label</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imágenes/Poopypets.png" class="d-block w-100" alt="...">
+            <img src="imágenes/Poopypets (1).png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h5>Third slide label</h5>
               <p>Some representative placeholder content for the third slide.</p>
