--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
           <div class="carousel-item active">
             <img src="imágenes/absorsolx2 (2).png" class="d-block w-100" alt="absorsol verde">
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>ABSORSOL PREMIUM</h5>
+              <p>Presentación 3,6 y 2 kg</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imágenes/ag-lavandax2 (1).png"class="d-block w-100" alt="altagama lavanda">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>ALTAGAMA fragancia LAVANDA</h5>
+              <p>Presentación 3,6 kg</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imágenes/Poopypets (1).png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>POOPY PETS</h5>
+              <p>Presentación 5 y 2 kg</p>
             </div>
           </div>
         </div>
