--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Economica&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Economica&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,7 +31,7 @@
     />
     <link rel="icon" href="imágenes/logo MP2 (1).ico" />
     <title>Distribuidora Mascotas Pueyrredón</title>
-    <link rel="stylesheet" href="estilos/estilos.css" /> 
+    <link rel="stylesheet" href="estilos/estilos.css" />
     <meta
       name="google-site-verification"
       content="v-0Jd6QxM0FsGzEOGLqB7RmO5-00ahh2OfKlCTc4N1U"
@@ -37,47 +40,95 @@
   <body>
     <header id="idheader"></header>
     <script src="script/header.js"></script>
+    <div class="wapp">
+      <a href="https://wa.me/1124445321" target="_blank"
+        ><img src="imágenes/wapp.png" alt="whatsapp" height="100"
+      /></a>
+    </div>
     <main>
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imágenes/absorsolx2 (2).png" class="d-block w-100" alt="absorsol verde">
+            <img
+              src="imágenes/absorsolx2 (2).png"
+              class="d-block w-100"
+              alt="absorsol verde"
+            />
             <div class="carousel-caption d-none d-md-block">
               <h5>ABSORSOL PREMIUM</h5>
               <p>Presentación 3,6 y 2 kg</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imágenes/ag-lavandax2 (1).png"class="d-block w-100" alt="altagama lavanda">
+            <img
+              src="imágenes/ag-lavandax2 (1).png"
+              class="d-block w-100"
+              alt="altagama lavanda"
+            />
             <div class="carousel-caption d-none d-md-block">
               <h5>ALTAGAMA fragancia LAVANDA</h5>
               <p>Presentación 3,6 kg</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imágenes/Poopypets (1).png" class="d-block w-100" alt="...">
+            <img
+              src="imágenes/Poopypets (1).png"
+              class="d-block w-100"
+              alt="..."
+            />
             <div class="carousel-caption d-none d-md-block">
               <h5>POOPY PETS</h5>
               <p>Presentación 5 y 2 kg</p>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
   <footer id="idfooter"></footer>
   <script src="script/footer.js"></script>
