--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
         </button>
       </div>
       <div class="wapp">
-        <a href="https://wa.me/11124445321" target="_blank"
-          ><img src="imágenes/wapp.png" alt="whatsapp" height="100"
-        /></a>
+        <a aria-label="Chat on WhatsApp" href="https://wa.me/11124445321" target="_blank"> <img alt="Chat on WhatsApp" src="imágenes/WhatsAppButtonGreenLarge.png" /> </a>
       </div>
     </main>
     <script
