--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </button>
       </div>
       <div class="wapp">
-        <a aria-label="Chat on WhatsApp" href="https://wa.me/111124445321" target="_blank"> <img alt="Chat on WhatsApp" src="imágenes/WhatsAppButtonGreenLarge.png" /> </a>
+        <a aria-label="Chat on WhatsApp" href="https://api.whatsapp.com/send?phone=1124445321&text=Hola, quisiera más información" target="_blank"> <img alt="Chat on WhatsApp" src="imágenes/WhatsAppButtonGreenLarge.png" /> </a>
       </div>
     </main>
     <script
