--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <link rel="icon" href="imágenes/logo MP2 (1).ico" />
     <title>Distribuidora Mascotas Pueyrredón</title>
     <link rel="stylesheet" href="estilos/estilos.css" />
+    <link rel="stylesheet" href="fontello-a540fdbf/css/fontello.css" />
     <meta
       name="google-site-verification"
       content="v-0Jd6QxM0FsGzEOGLqB7RmO5-00ahh2OfKlCTc4N1U"
@@ -106,9 +107,12 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <div class="wapp">
-        <a aria-label="Chat on WhatsApp" href="https://api.whatsapp.com/send?phone=1124445321&text=Hola, quisiera más información" target="_blank"> <img alt="Chat on WhatsApp" src="imágenes/WhatsAppButtonGreenLarge.png" /> </a>
-      </div>
+      <a
+        href="https://api.whatsapp.com/send?phone=1124445321&text=Hola, quisiera más información"
+        class="btn-wsp"
+        target="_blank"
+        ><i class="icon-whatsapp"></i
+      ></a>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
