--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </button>
       </div>
       <a
-        href="https://api.whatsapp.com/send?phone=541124445321&text=Hola, quisiera más información"
+        href="https://api.whatsapp.com/send?phone=541124445321&text=Hola, tengo un comercio y quisiera más información"
         class="btn-wsp"
         target="_blank"
         ><i class="icon-whatsapp"></i
